attempt to run release

--- a/charts/prometheus-kubelet-stats-exporter/Chart.yaml
+++ b/charts/prometheus-kubelet-stats-exporter/Chart.yaml
@@ -5,6 +5,7 @@ home: https://github.com/petros-d/kubelet-stats-exporter
 keywords:
 - prometheus
 - kubelet
+- stats
 - monitoring
 maintainers:
 - name: sequra
